--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,11 +31,8 @@
      "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     "paths": {
 	    "@/*": ["./src/*"],
-	    "@util/*": ["./src/_util/*"],
 	    "@core/*": ["./src/_core/*"],
-	    "@entities/*": ["./src/domain/entities/*"],
-	    "@use-cases/*": ["./src/domain/use-cases/*"],
-	    "@repositories/*": ["./src/domain/repositories/*"],
+	    "@domain-forum/*": ["./src/domain/forum/*"],
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
