--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,7 @@
 	    "@/*": ["./src/*"],
 	    "@core/*": ["./src/_core/*"],
 	    "@domain-forum/*": ["./src/domain/forum/*"],
+	    "@tests/*": ["./tests/*"],
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
